fix: edges delete failed after node deleted
